# ivf-lab-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/src/ivf_lab/: main.py  seed.py
backend/src/ivf_lab/config/: database.py  settings.py
backend/src/ivf_lab/domain/models/: __init__.py  audit_log.py  base.py  checklist.py  clinic.py  cycle.py  embryo.py  embryo_event.py  enums.py  patient_alias.py  storage.py  user.py
backend/src/ivf_lab/domain/repositories/: base.py  checklist_repo.py  cycle_repo.py  embryo_repo.py  patient_repo.py  storage_repo.py  user_repo.py
backend/src/ivf_lab/domain/services/: audit_service.py  auth_service.py  checklist_service.py  cycle_service.py  embryo_service.py
backend/src/ivf_lab/infrastructure/api/: audit.py  auth.py  checklists.py  cycles.py  deps.py  embryos.py  export.py  patients.py  storage.py  users.py
backend/src/ivf_lab/infrastructure/auth/: jwt.py  password.py
backend/src/ivf_lab/infrastructure/middleware/: error_handler.py  tenant.py
backend/src/ivf_lab/infrastructure/schemas/: audit.py  auth.py  checklist.py  common.py  cycle.py  embryo.py  embryo_event.py  patient.py  storage.py  user.py
backend/src/ivf_lab/migrations/: env.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_api.py  test_cycles_api.py  test_embryos_api.py  test_export_api.py  test_patients_api.py  test_users_api.py  test_week_view_api.py
backend/tests/unit/: test_enums.py  test_jwt.py  test_password.py
(+46 files in other folders)
